# create-a-cli-tool

./: .MAINFEST.in.swp  .gitignore  .readthedocs.yml  LICENSE  MAINFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: auto-merge.yml  black.yml  ci.yml  codeql-analysis.yml  lint.yml  publish.yml
cli/: __init__.py  cli.py  commands.py  errors.py
cli/ext/: shard.py
docs/: cli.ext.rst  cli.rst  conf.py  ext.rst  index.rst  whats_new.rst
examples/: arguments.py  group.py  no_welcome_messages.py  normal.py  shard.py
notes/: basic_cli.md  group_cli.md  shards.md
tests/: test_main.py
