[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:"
]

[tool.isort]
profile = "black"
line_length = 120


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
]
ignore = [
    "E501", # line-too-long (not compatible with black)
    "F405", # undefined-local-with-import-star
    "F403", # undefined-local-with-import-star-usage
]
